--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Selwyn Davenport</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello and welcome to my first website template. Here you will learn a few things about me and my passions.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Hamilton Ontario and now live in Mississauga Ontario. Although I am born here my biological background is Guyanese and Jamaican.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My Favorite hobbies are computer gaming and designing.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a software developer. I love to learn every little bit about coding, when it comes to phrases or terms it fascinates me to know how they interact and what you can do with them. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently live in Mississauga Ontario, about 40min drive from the University of Toronto. </p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want ot become a web Developer because I feel like it would make a great first step onto becoming a software developer and help me understand coding a bit more.</p>
     </section>
 
     <footer id="footer">
