made final changes to h1 tags and href

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class='masthead'>
-        <p class='masthead-intro'>Hi I'm</p>
+        <p class='masthead-intro'>Hi My Name is...</p>
         <h1 class='masthead-heading'>Selwyn Davenport</h1>
     </header>
     <section class="details">
@@ -32,7 +32,7 @@
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Mystery link</a></li>
         </ul>
     </footer>
 </body>
